# OpenCL-Practice

./: CMakeLists.txt  HistogramOfImage.c  LearnToQueryPlatform.c  README.md  histogram.cl
